--- a/packages/tailwind-config/shared-styles.css
+++ b/packages/tailwind-config/shared-styles.css
@@ -1,9 +1,16 @@
 @import "tailwindcss";
 
+@config "./tailwind.config.ts";
+
 @theme {
     --color-text-menu-hover: #00E9FF;
     --color-bg-menu: #0D0D0D;
     --color-primary: #FAFAFA;
+    --color-bg-card: #F4F4F4;
+    --color-bg-card-alt: #E0E0E0;
+    --color-text-primary: #161616;
+    --color-text-primary-hover: #16161677;
+    --color-text-secondary: #6F6F6F;
 }
 * {
     margin: 0;
@@ -28,5 +35,67 @@
             color: var(--color-text-menu-hover);
             border-top: 8px solid var(--color-text-menu-hover);
         }
+    }
+    .commentsButton {
+        border-radius: 8px;
+        border: 1px solid #525252;
+        font-size: 16px;
+        font-weight: 600;
+        font-family: 'Inter', sans-serif;
+        text-transform: uppercase;
+        background: none;
+        cursor: pointer;
+        transition: opacity 0.25s ease;
+        &:hover {
+            opacity: 0.50;
+        }
+
+        svg {
+            width: 16px;
+            height: 16px;
+        }
+    }
+    /* Text Theme Variables */
+    .textTitleItemLg {
+        font-family: Inter;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 140%;
+        letter-spacing: -0.4px;
+    }
+    .textTitleItemMd {
+        font-family: Inter;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 150%;
+        letter-spacing: -0.32px;
+    }
+    .textTitleItemSm {
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 150%;
+        letter-spacing: -0.32px;
+    }
+    .textTitleItemXs {
+        font-family: Inter;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 125%;
+        letter-spacing: -0.28px;
+    }
+    .textTitleItemXXs {
+        font-family: Inter;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 120%;
+        letter-spacing: -0.24px;
+    }
+    .textLabelMenuItem {
+        font-family: Inter;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 120%;
     }
 }
