--- a/packages/tailwind-config/shared-styles.css
+++ b/packages/tailwind-config/shared-styles.css
@@ -9,8 +9,9 @@
     --color-bg-card: #F4F4F4;
     --color-bg-card-alt: #E0E0E0;
     --color-text-primary: #161616;
-    --color-text-primary-hover: #16161677;
     --color-text-secondary: #6F6F6F;
+    --color-link-primary: #4B006E;
+    --color-border-primary: #525252;
 }
 * {
     margin: 0;
@@ -38,7 +39,7 @@
     }
     .commentsButton {
         border-radius: 8px;
-        border: 1px solid #525252;
+        border: 1px solid var(--color-border-primary);
         font-size: 16px;
         font-weight: 600;
         font-family: 'Inter', sans-serif;
@@ -53,6 +54,17 @@
         svg {
             width: 16px;
             height: 16px;
+        }
+    }
+    .commentLink {
+        color: var(--color-link-primary);
+        font-weight: 400;
+        text-decoration: underline;
+        text-underline-position: from-font;
+        transition: 0.25s ease;
+        &:hover {
+            /* Applies 50% transparency over the current color */
+            color: color-mix(in oklab, var(--color-link-primary) 50%, transparent);
         }
     }
     /* Text Theme Variables */
@@ -89,7 +101,7 @@
         font-family: Inter;
         font-size: 13px;
         font-weight: 400;
-        line-height: 120%;
+        line-height: 125%;
         letter-spacing: -0.24px;
     }
     .textLabelMenuItem {
